0030119: Visualization - implement mechanism for generating in/out section of shader programs.

Added function which generate in/out part of shaders source code from prepared list of variables.